some changes or whatever

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -29,7 +29,7 @@
     "    \n",
     "<i> HWR Berlin, Sommmersemester 2024 </i>\n",
     "    \n",
-    "<i>Mikal Kremer, Uwe</i>"
+    "<i>Mikal Kremer, Uwe, Marcus</i>"
    ]
   },
   {
@@ -234,9 +234,7 @@
    },
    "source": [
     "<center>\n",
-    "<font size = \"8\">Vielen Dank für ihre Aufmerksamkeit!!!</font>\n",
-    "<center>\n",
-    "<font size = \"8\">✌✌✌✌✌✌✌✌😎👏😎✌✌✌✌✌✌✌✌</font>\n",
+    "<font size = \"8\">Vielen Dank fuer ihre Aufmerksamkeit!!!</font>\n",
     "<center>"
    ]
   },
